# normal_method

./: .gitignore  README.md  pyproject.toml
notebooks/: utils.ipynb
scripts/: main.py
src/normal_method/: __init__.py
src/normal_method/analysis/: time_dependency.py  y_data.py
src/normal_method/data/: __init__.py  make_dataset.py
src/normal_method/models/: CNN.py  kldivergence.py  models.py  ssim_model.py  uncertainty.py
src/normal_method/speckle/: __init__.py  models.py  prediction.py
src/normal_method/visualization/: display.py
wandb/: latest-run
wandb/run-20240702_213839-gijarc0n/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240703_134648-h6df8xfj/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
