[project]
name = "normal-method"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "morixxfoxdata", email = "morixx.datascience@gmail.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.5",
    "torch>=2.3.1",
    "wandb>=0.17.3",
    "statsmodels>=0.14.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/normal_method"]
